--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
     <script src="./index.js" type="module" defer></script>
   </head>
   <body>
+    <img src="" alt="" srcset="">
   </body>
 </html>
