--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script src="./index.js" type="module" defer></script>
   </head>
   <body>
-    <img src="" alt="" srcset="">
   </body>
 </html>
